Fix modal overflowing

--- a/frontend/src/components/Modal/Modal.module.scss
+++ b/frontend/src/components/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 .modal-background {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   bottom: 0;
@@ -9,8 +9,4 @@
   display: grid;
   align-items: center;
   justify-content: center;
-}
-
-.modal-content {
-  background: #fff;
 }
